fixed page refresh issue and remove dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,9 @@
   justify-content: center;
   color: white;
 }
-
+body {
+  background-color: #000;
+}
 .dark {
   background-color: #000;
   color: #ffffff;
